force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/Executive_Performance_Appraisal__c.object-meta.xml
<CustomObject>
    <label>Executive Performance Review</label>
    <nameField>
        <displayFormat>EPA-{0000}</displayFormat>
        <label>Executive Performance Appraisal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Performance Review</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>