force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Ach_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Ach_to_Target__c</fullName>
    <label>Ach to Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>