force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Actual_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Actual_Expenses__c</fullName>
    <label>Actual Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>