force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Actual_Total_Exp_to_Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Actual_Total_Exp_to_Sales_Ratio__c</fullName>
    <label>Actual Total Exp to Sales Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>