force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/CDB_Generated_Nos__c.field-meta.xml
<CustomField>
    <fullName>CDB_Generated_Nos__c</fullName>
    <label>CDB Generated (Nos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>