force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/CFB_Collected_Nos__c.field-meta.xml
<CustomField>
    <fullName>CFB_Collected_Nos__c</fullName>
    <label>CFB Collected (Nos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>