force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/CTC__c.field-meta.xml
<CustomField>
    <fullName>CTC__c</fullName>
    <label>CTC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>