force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/CTC_to_Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>CTC_to_Sales_Ratio__c</fullName>
    <formula>( CTC__c  /  Sales_Achievement_lacs__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTC to Sales Ratio (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>