force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Enquiry_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Conversion__c</fullName>
    <label>Enquiry Conversion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>