force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Enquiry_Generated_Nos__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Generated_Nos__c</fullName>
    <label>Enquiry Generated- Nos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>