force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/HQ_location__c.field-meta.xml
<CustomField>
    <fullName>HQ_location__c</fullName>
    <label>HQ location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>