force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Lost_Customer_Revival_Nos__c.field-meta.xml
<CustomField>
    <fullName>Lost_Customer_Revival_Nos__c</fullName>
    <label>Lost Customer Revival (Nos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>