force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Month_In_number__c.field-meta.xml
<CustomField>
    <fullName>Month_In_number__c</fullName>
    <formula>IF(ISPICKVAL(Month__c, &apos;January&apos;) , 1, 
 IF(ISPICKVAL(Month__c, &apos;February&apos;), 2, 
  IF(ISPICKVAL(Month__c, &apos;March&apos;), 3, 
   IF(ISPICKVAL(Month__c, &apos;April&apos;), 4, 
    IF(ISPICKVAL(Month__c, &apos;May&apos;), 5, 
     IF(ISPICKVAL(Month__c, &apos;June&apos;), 6, 
      IF(ISPICKVAL(Month__c, &apos;July&apos;), 7, 
       IF(ISPICKVAL(Month__c, &apos;August&apos;), 8, 
        IF(ISPICKVAL(Month__c, &apos;September&apos;), 9, 
         IF(ISPICKVAL(Month__c, &apos;October&apos;), 10, 
          IF(ISPICKVAL(Month__c, &apos;November&apos;), 11, 12)))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month(In number)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>