force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/New_Channel_Partner_addition_Nos__c.field-meta.xml
<CustomField>
    <fullName>New_Channel_Partner_addition_Nos__c</fullName>
    <label>New Channel Partner addition (Nos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>