force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/New_Customer_Addtion_Nos__c.field-meta.xml
<CustomField>
    <fullName>New_Customer_Addtion_Nos__c</fullName>
    <label>New Customer Addtion (Nos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>