force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Opportunities_Converted__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Converted__c</fullName>
    <label>Opportunities Converted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>