force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Opportunities_Converted_In_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Converted_In_Percentage__c</fullName>
    <formula>(  Opportunities_Converted__c /  Opportunities_Created__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunities Converted (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>