force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/RCCA_Report_Nos__c.field-meta.xml
<CustomField>
    <fullName>RCCA_Report_Nos__c</fullName>
    <label>RCCA Report  (Nos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>