force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Reporting_to__c.field-meta.xml
<CustomField>
    <fullName>Reporting_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reporting to</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Executive_Performance_Appraisals1</relationshipName>
    <type>Lookup</type>
</CustomField>