force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Sales_Achievement_lacs__c.field-meta.xml
<CustomField>
    <fullName>Sales_Achievement_lacs__c</fullName>
    <label>Sales Achievement (lacs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>