force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Sales_Achievement_to_Target__c.field-meta.xml
<CustomField>
    <fullName>Sales_Achievement_to_Target__c</fullName>
    <formula>(Sales_Achievement_lacs__c  /  Sales_Target_lac__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Achievement to Target (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>