force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Sales_Short_fall_Excess_lac__c.field-meta.xml
<CustomField>
    <fullName>Sales_Short_fall_Excess_lac__c</fullName>
    <formula>Sales_Achievement_lacs__c  -  Sales_Target_lac__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Short fall/Excess (lac)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>