force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Sales_Target_in_lacs__c.field-meta.xml
<CustomField>
    <fullName>Sales_Target_in_lacs__c</fullName>
    <label>Sales Target - in lacs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>