force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Short_fall_Excess_in_lacs__c.field-meta.xml
<CustomField>
    <fullName>Short_fall_Excess_in_lacs__c</fullName>
    <label>Short fall/Excess - in lacs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>