force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Target_Expenses_to_Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Target_Expenses_to_Sales_Ratio__c</fullName>
    <formula>( Planned_Expenses__c  /  Sales_Target_lac__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target - Expenses to Sales Ratio (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>