force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Target_Total_Exp_to_Sales_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Target_Total_Exp_to_Sales_Ratio__c</fullName>
    <label>Target -Total Exp to Sales Ratio</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>