force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Total_Collections__c.field-meta.xml
<CustomField>
    <fullName>Total_Collections__c</fullName>
    <label>Total Collections</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>