force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Total_Collections_in_local_currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Collections_in_local_currency__c</fullName>
    <label>Total Collections in local currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>