force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Total_Highlights_Nos__c.field-meta.xml
<CustomField>
    <fullName>Total_Highlights_Nos__c</fullName>
    <label>Total Highlights (Nos)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>