force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Total_No_of_Calls_made__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Calls_made__c</fullName>
    <label>Total No of Calls made</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>