force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Total_Qty_in_Nos__c.field-meta.xml
<CustomField>
    <fullName>Total_Qty_in_Nos__c</fullName>
    <label>Total Qty in Nos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>