force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/fields/Total_Volume_in_kgs__c.field-meta.xml
<CustomField>
    <fullName>Total_Volume_in_kgs__c</fullName>
    <label>Total Volume in kgs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>