force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Executive__c</columns>
    <columns>Actual_Expenses__c</columns>
    <columns>Opportunities_Converted_In_Percentage__c</columns>
    <columns>Sales_Achievement_to_Target__c</columns>
    <columns>Actual_Expenses_to_Sales_Ratio__c</columns>
    <columns>Target_Expenses_to_Sales_Ratio__c</columns>
    <columns>Total_Highlights_Nos__c</columns>
    <columns>Total_Qty_Nos__c</columns>
    <columns>Reporting_to__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>