force-app/force-app/force-app/main/default/objects/Executive_Performance_Appraisal__c/listViews/My_Executive_Performance_Appraisal.listView-meta.xml
<ListView>
    <fullName>My_Executive_Performance_Appraisal</fullName>
    <columns>NAME</columns>
    <columns>Executive__c</columns>
    <columns>Sales_Target_in_lacs__c</columns>
    <columns>Sales_Achievement_in_lacs__c</columns>
    <columns>CTC_in_local_currency__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Executive Performance Appraisal</label>
</ListView>